--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.3.1
-Django==3.1.7
-Pillow==8.2.0
+Django==2.2.20
+gunicorn==20.1.0
+Pillow==7.2.0
+psycopg2==2.8.6
 psycopg2-binary==2.8.6
 pytz==2021.1
 sqlparse==0.4.1
